fix coming soon layout bugs

--- a/webpack/styles/pages/coming_soon.scss
+++ b/webpack/styles/pages/coming_soon.scss
@@ -1,122 +1,163 @@
 .coming-soon {
   height: 100%;
 
+  .content {
+    position: relative;
+    overflow: hidden;
+    min-height: 100%;
+
+    @include desktop {
+      min-height: auto;
+    }
+  }
+
   &__logo {
     background-image: url('~images/logo-poppables.png');
     background-repeat: no-repeat;
     background-size: contain;
     display: block;
-    height: 155px;
-    margin: 3vw auto 0;
+    margin: 8vh auto 0;
     position: relative;
-    width: 165px;
+    width: 57vw;
+    max-width: 236px;
 
-    @include breakpoint($breakpoint-mobile) {
-      margin-top: 2.5rem;
-      width: 185px;
+    @media (orientation: landscape) {
+      margin-top: 7vh;
+      width: 13.5vw;
     }
 
-    @include desktop {
-      height: 175px;
-      margin-top: 4rem;
-      width: 212px; 
+    &:after {
+      content: '';
+      display: block;
+      padding-top: 100%;
     }
   }
 
   &__content {
     color: #1ac5cd;
-    left: 50%;
-    position: absolute;
     text-align: center;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.6), 0 1px 0 rgba(255, 255, 255, 0.6);
-    top: 50%;
-    transform: translate(-50%, -50%);
-    width: 90%;
     z-index: 0;
+    position: absolute;
+    top: 53%;
+    transform: translateY(-50%);
+    width: 100%;
+    letter-spacing: 0.01em;
+
+    @media (orientation: portrait) and (min-width: 414px) {
+      top: 48%;
+    }
+
+    @media (orientation: landscape) {
+      top: 48%;
+    }
   }
 
   &__title {
-    font-size: 1.875rem;
-    letter-spacing: -.0625rem;
-    margin-top: 0;
+    margin: 0;
+    font-size: 9vw;
     text-transform: uppercase;
+    font-weight: normal;
 
-    @include desktop {
-      font-size: 3.75rem;
-      letter-spacing: -.125rem;
+    @media (orientation: portrait) and (min-width: 414px) {
+      font-size: 37px;
+    }
+
+    @media (orientation: landscape) {
+      font-size: 3.7vw;
+    }
+
+    @media (orientation: landscape) and (min-width: 1600px) {
+      font-size: 60px;
     }
   }
 
   &__copy {
-    font-size: 1.125rem;
-    margin: 1rem auto 0;
+    font-size: 5vw;
+    margin: 3vw auto 0;
 
-    @include desktop {
-      font-size: 1.875rem;
-      letter-spacing: -.0625rem;
+    @media (orientation: portrait) and (min-width: 414px) {
+      font-size: 21px;
+      margin-top: 12px;
+    }
+
+    @media (orientation: landscape) {
+      font-size: 1.8vw;
+      margin-top: 1vw;
+    }
+
+    @media (orientation: landscape) and (min-width: 1600px) {
+      font-size: 29px;
+      margin-top: 16px;
     }
   }
 
-  &__bags {
-    height: 100%;
-    left: 0;
-    overflow: hidden;
+  .bags {
+    @include fillContainer;
+
+    z-index: $zFrontBags;
+  }
+
+  @mixin bag {
+    width: 55%;
     position: absolute;
-    top: 0;
-    width: 100%;
-    z-index: 5;
+    top: 100%;
+    pointer-events: all;
+    transform: translateY(-100vh) translateY(-100%);
+    transition: all 1s $ease-out-quart;
+
+    .phase1 & {
+      transition: all 1s $ease-out-quart;
+    }
+
+    &:before {
+      content: '';
+      display: block;
+      top: 0;
+      left: 0;
+      width: 100%;
+      padding-top: 141%;
+    }
   }
 
-  &__bag {
-    &-left,
-    &-right {
-      width: 55%;
-      position: absolute;
-      top: 0;
-      pointer-events: all;
+  .orangeBag {
+    @include bag;
 
-      &:before {
-        content: '';
-        display: block;
-        top: 0;
-        left: 0;
-        width: 100%;
-        padding-top: 141%;
-      }
+    right: 38%;
+    transform: rotate(-6deg) translateY(-56%);
+    background: url('~images/bagOrange740.png') center top no-repeat;
+    background-size: contain;
+
+    @media (orientation: landscape) {
+      width: 23%;
+      right: 45%;
     }
 
-    &-left {
-      background: url('~images/bagOrange740.png') center top no-repeat;
-      background-size: contain;
-      right: 38%;
-      transform: translateY(100vh) rotate(-6deg) translateY(-56%);
-      transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    &:hover, &:focus {
+      transform: rotate(-6deg) translateY(-83%);
+    }
+  }
 
-      @media (orientation: landscape) {
-        width: 23%;
-        right: 45%;
-      }
+  .blueBag {
+    @include bag;
 
-      &:hover {
-        transform: translateY(100vh) rotate(-6deg) translateY(-83%);
-      }
+    left: 42%;
+    transform: rotate(6deg) translateY(-56%);
+    background: url('~images/bagBlue740.png') center top no-repeat;
+    background-size: contain;
+
+    @media (orientation: landscape) {
+      width: 23%;
+      left: 46%;
     }
 
-    &-right {
-      background: url('~images/bagBlue740.png') center top no-repeat;
-      background-size: contain;
-      left: 42%;
-      transform: translateY(100vh) rotate(6deg) translateY(-56%);
-      transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    &:hover, &:focus {
+      transform: rotate(6deg) translateY(-83%);
+    }
 
-      @media (orientation: landscape) {
-        width: 23%;
-        left: 46%;
-      }
-
-      &:hover {
-        transform: translateY(100vh) rotate(6deg) translateY(-83%);
-      }
+    img {
+      width: 100%;
+      position: relative;
     }
   }
 
@@ -124,20 +165,7 @@
     display: none;
   }
 
-  .content {
-    min-height: 100%;
-  }
-
   .footer {
-    position: relative;
-    z-index: 7;
-
-    @include tablet {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-    }
-
     ul {
       li {
         &:first-child {
